--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,12 @@ training_log.json
 
 # Data files (optional - uncomment if you don't want to commit raw data)
 # data/
+
+# Testing
+.pytest_cache/
+.coverage
+coverage.xml
+htmlcov/
+.tox/
+*.cover
+.hypothesis/
